<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/view_images"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_images"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_octocat"
            android:src="@drawable/photo_2" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/textName"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/view_images"
        app:layout_constraintTop_toTopOf="@+id/view_images" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/textName"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/view_images"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <Button
        android:id="@+id/btn_set_favorite"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="#D81B60"
        android:text="@string/favorite"
        android:textSize="12sp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_id"
        app:layout_constraintStart_toEndOf="@+id/view_images"
        tools:layout_editor_absoluteX="96dp" />

</androidx.constraintlayout.widget.ConstraintLayout>